fix animation overflow?

--- a/css/billboard.css
+++ b/css/billboard.css
@@ -56,6 +56,7 @@
 	z-index: 2;
 	top: 0px;
 	left: 0px;
+	overflow: hidden;
 }
 
 .uds-square {
